--- a/hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-shuffle/pom.xml
+++ b/hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-shuffle/pom.xml
@@ -24,7 +24,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.hadoop</groupId>
   <artifactId>hadoop-mapreduce-client-shuffle</artifactId>
-  <version>2.6.0-cdh5.5.1</version>
+  <version>2.6.0-cdh5.5.1_fix_5938</version>
   <name>hadoop-mapreduce-client-shuffle</name>
 
   <properties>
@@ -36,14 +36,17 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-yarn-server-common</artifactId>
+      <version>2.6.0-cdh5.5.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-yarn-server-nodemanager</artifactId>
+      <version>2.6.0-cdh5.5.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-mapreduce-client-common</artifactId>
+      <version>2.6.0-cdh5.5.1</version>
     </dependency>
     <dependency>
       <groupId>org.fusesource.leveldbjni</groupId>
@@ -56,6 +59,7 @@
       <plugin>
         <groupId>org.apache.hadoop</groupId>
         <artifactId>hadoop-maven-plugins</artifactId>
+        <version>2.6.0-cdh5.5.1</version>
         <executions>
           <execution>
             <id>compile-protoc</id>
